--- a/슬라임서바이버.md
+++ b/슬라임서바이버.md
@@ -39,11 +39,10 @@
   - 같은 카드를 다시 선택하면 등급이 올라간다. 
    
 ### 5. 능력치 상승
-  - 게임내에 출현하는 카드를 뽑기를 통해 기본 수치를 상승 시킬수 있음 
+  - VIP 뽑기와 골드를 통해 카드에 기본 능력치를 상승 
   - 다이아로 VIP 뽑기 
     - 장비 : 무기, 방어구, 반지, 플러스 한가지 더
     - 카드 : 뽀기를 통해 스킬 카드 강화
-    - 동료 : 뽑기를 통해 동료 카드 강화
   - 골드로 강화
     - 골드를 통해 능력 강화 
 
