--- a/슬라임서바이버.md
+++ b/슬라임서바이버.md
@@ -25,356 +25,33 @@
   - 하단부에 가상 조이스틱으로 조작하여 이동하며
   - 마법의 돌을 던져서 인간 전사들을 물리친다.
 
-### 2. 보스를 클리어하면 마법의 카드를 선택 할수 있다.
+### 2. 보스를 클리어
   - 웨이브를 4개를 클리어하면 보스
   - 보스를 클리어하면 
-  - 마법의 카드를 선택할수 있다.
+  - 다음 에피소드를 진행
+  - 보스 클리어하지 못하면 마지막 웨이브를 반복한다.
 
-### 3. 카드로 스킬 선택
-  - 스탯 스킬 : 스탯을 강화하는 스킬 -> 공격력 플러스 10%류
-  - 소환 스킬 : 동료를 소환하는 스킬 -> 갑돌이를 불러서 같이 다닌다.
-  - 마법 스킬 : 특수 마법 스킬 -> 화이어 레인 -> 하늘에서 불비가 내려온다.
+### 3. 강화
+  - 게임에서 얻은 골드로 강화
+    - 공격력, 체력, 체력 회복, 크리티컬, 크리티컬 데미지, 더블샷, 트리플샷, 공격 스피드 
+  - VIP 뽑기를 통한 강화
+    - 스킬, 동료, 장비 (무기, 방어구, 반지, 추가 1종) 
 
-### 4. 동일 카드일 경우 등급 업
-  - 같은 카드를 다시 선택하면 등급이 올라간다. 
-   
-### 5. 능력치 상승
-  - VIP 뽑기와 골드를 통해 카드에 기본 능력치를 상승 
-  - 다이아로 VIP 뽑기 
-    - 장비 : 무기, 방어구, 반지, 플러스 한가지 더
-    - 카드 : 뽀기를 통해 스킬 카드 강화
-  - 골드로 강화
-    - 골드를 통해 능력 강화 
+### 4. 연구
+  - 슬라임의 마법을 연구 
+  - 시간을 사용 -> 다이아로 즉시 완료 가능
 
-## 게임 특징
+### 5. 추가 재화 확보를 위한 던전
+  - 보스 던전 -> 다이아 보상
+  - 황금 마차 -> 골드 보상
+  - 마을 침략 -> 유물 보상 
+  - 마운 보스 -> 장비 보상
+  - 슬라임 대전 -> 슬라임만 모아서 침략 -> 반지 제공
 
-※ 10페이지 이내 작성
-1) 프로젝트 개요 (타이틀, 타켓 연령, 장르)
-2) 게임내용 혹은 컨셉 (게임 특징 등)
-3) 캐릭터 이미지, 설명
-4) 게임방법
-5) 인력운영현황
- - 총 개발인력, 인력구성 현황 및 간략한 소개
- (예) 총 3명 (홍길동, 김대한, 이민국)
- 그래픽 1명(홍길동), 프로그래머 2명(김대한, 이민국)
-6) BM(Business Model)
-7) 그 밖에 신청 게임의 우수성을 설명할 수 있는 내용 작성
-미니멀리즘 스타일의 방치형 게임을 통해 완벽한 타워를 건설하세요. 상상 이상의 타워 방어.
-
-The Tower는 한 개의 타워를 지키고 발전시키는 발전형 타워 디펜스 게임입니다. 타워가 파괴될 때까지 타워를 방어하고 영구적으로 업그레이드한 다음 다시 시도해 보세요! 완벽한 방어 타워를 건설하세요.
-
-The Tower의 특징
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# 중요 설정
-## 세계관
-1) 외계의 신호
-    - 2020년 외계의 신호가 잡혔다. 
-    - 오랜 연구 끝에 이것이 어떠한 무엇의 설계도라는 것을 알게 된다.
-    - 지구는 이것이 무엇인지 알수 없지만 만들어 보자는 쪽과 아니라는 쪽으로 나뉘는데 
-    - 결국 자유진영쪽에서 이를 만들게 된다. 
-    - 이는 거대한 보롯이었다. 
-
-2) 지구 침략
-    - 2023년 남 태평양에 해저 화산이 폭팔했다. 
-    - 이후 지구상에 고대 괴수가 나타났다.
-    - 이들은 아주 오래전에도 했던 것처럼 지구를 정복하려 하는데  
-
-3) 고대의 방어
-    - 인간은 이 괴수들을 물리치기 위해 거대 로봇을 사용하게 된다.
-    - 이를 위해 몇년간 지구상에 특수한 인간들이 선발되어 훈련되어 온것이다. 
-    - 하지만 실제 이 로봇과 싱크가 맞는 사람은 한명으로 그가 조종사가 된다.  
-4) 인간의 방어
-    - 거대 로봇과 함께 인간도 현재까지 인간의 기술을 기반으로 괴수와의 전쟁을 선포한다.     
-
-
-## 보상
-### 1. 골드
-1) 개념
-    - 게임의 기본 재화 
-
-2) 보상 
-    - 전투를 통해 확보되는 재화 
-    - 전투외 확보처
-      - 골드 던전
-      - 인게임에서 광고 보상 상자
-      - 방치 보상 보너스
-
-3) 사용처
-    - 강화에 사용되는 기본 재화 
-
-### 2. 다이아
-1) 개념
-    - 골드외에 부개 재화 
-    - 유료 재화로 샵에서 구매 가능하다.
-
-2) 보상
-    - 우편함으로 보상 지급
-    - 퀘스트를 통해 보상
-    - 이벤트를 통해 보상 
-    - 인게임 광고 보상
-    - 보스 던전을 통해 보상 
-
-3) 사용처
-    - 샵에서 주로 장비, 동료, 스키 소환에서 사용
-    - 로봇 구매시에 사용 
-    - 각종 컨텐츠의 즉시 완료시 사용
-    - 상점 리셋등 리셋할때 사용
-
-### 3. 추가 재화
-1) 아루메타늄 : 로봇 강화에 사용
-    - 지구상에 유일하게 칠레 인근에서 매장
-    - 광산에서 채굴한다.
-    - 다이아, 프리타늄도 같이 발굴된다.
-    - 로봇 강화에 사용 
-    - 광산 사용 재화
-        - 아르메타늄
-        - 다이아
-        - 광산 채굴 도끼
-        - 드릴, 폭탄
-        - 고대 부속 - 연구재료 
-
-2) 피타일 : 유물 뽑기에 사용
-    - 아지트에서 구할수 있다. 
-    - 피타일은 고대 유물의 표지석으로 피아티을 태우면 유물을 찾을수 있다. 
-    - 유물은 고대에 남은 선조의 유물이다. (오래된 부스터 처럼 생겼다.) 
-    - 유물은 최대 6개까지 장착 할수 있다.   
-    - 피타일을 이용하여 자체 뽑기로 확보
-
-3) sp포인트 : 기술 테크 트리에 사용
-    - 공격력, 체력, 체력 회복의 기본 수치와 
-    - 사정거리, 이동 속도 직업 수치를 테크 트리 포인트를 찍을수 있는 수치
-    - 재설정을 하려면 다이아를 사용해야 한다. 
-    - 포인트는 보스 클리어 할때마다 얻는다. (스테이지 하나에 30~60)
-
-4) tp포인트 : 특성 분화에 사용]
-    - 공격력, 체력, 동료피해, 멀티샷등.. 여기서 추가 한다. 
-
-## UI 가이드 (상단부)
-<table>
-<body>
-<tr>
-<td valign = top>
-<img src = "image/window10.png" width = 30%></br>
-</td>
-<td valign= top>
-                
-1) 레벨 : 로보트 레벨 -> 보유한 모든 로봇의 레벨을 합산한다.
-2) 골드 : 최대 골드 수량  
-3) 다이아 : 최대 다이아 수량
-4) 게임속도 : 광고보고 게임 속도 2배
-5) 옵션 : 설정, 우편함(일,주, 월단위 보급), 절전모드
-6) 축 : 골드, 공격력, 동료 -> 축 레벨이 있어서 레벨 상승할수록 축 시간이 길어진다. 
-7) 회전판 : 던전 열쇠들, 다이아 뽑기 회전 룰렛
-8) 보상 : 방치보너스 (골드, 장비)
-9) 패스 : 시즌패스와 일반 패스 
-10) 지역 : "21일째 새벽"
-11) 웨이브 넘버 : 에피소드별 4개 웨이브후 보스 진입 -> 보스 가기전에 파괴 될경우 웨이브 처음부터
-12) 보스 아이콘 : 보스 클리어 실패시에 보스 아이콘만 나오고 마지막 웨이브 반복된다.
-13) 퀘스트 안내 판넬 : 골드 보상을 기준으로 이벤트 안내 -> 이벤트 문서 참조
-14) 일일 퀘스트 : 다이아 보상을 기준으로 한 일일 퀘스트 -> 일일 퀘스트 문서 참조
-15) 이벤트            
-                
-</td>
-</tr>
-</body>
-</table>    
-
- 
-
-## UI 가이드 (중단부)
-<table><body><tr><td valign = top><img src = "image/window.png"></br></td> 
-<td valign= top>
-    
-16) 오토 스킬 버튼 : 자동 스킬
-17) 스킬 버튼 : 스킬 최대 6개
-        - 스킬 아이콘 -> 리젠 타임, 사용 쿨타임 표기 
-19) 전투력(컨디션) 표기 -> 표기 방식 => 12D/78% (축을 통해 상승하면 최대 200%까지 올라간다.) 
-20) 강화 버튼
-      - 공격력 (미사일 발사 공격력)
-      - 체력 (hp)
-      - 체력회복 (hp/sec)
-      - 크리티컬 확률 
-      - 크리티컬 데미지 (2배부터 시작)
-      - 바디샷 (기존 더블샷 - 근접 하면 몸통 공격)
-      - 더블 바디샷 (연속 바디 공격 - 근접 하면 연속 몸통 공격)
-      - 공격 스피드 (공격력, 바다샷, 더블샷 모두 영향 )
-      
-</td></tr></body></table>
-
-## UI 가이드 - 로보트 (주인공)
-
-<table>
-<body>
-<tr>
-        <td valign = top>
-            <img src = "image/window.png"></br>   
-            * 기본 UI   </br>
-        </td> 
-<td valign= top>
-    
-23) 로봇 </br>
-    - 마차 정보(이름, 이미지)를 볼수 있다.</br>
-    - 기능 
-      - 단축 버튼 : 장비(미사일, 엔진, 부스터, 헤리엇) </br>
-        - 미사일 : 기본 공격 미사일 -> 공격력 상승
-        - 엔진 : 방어력 ->
-        - 부스터 : 추가 능력을 발휘하는 반지와 같은 역활
-        - 헤리엇 : 날수 있게 해주는 역활 (시간 제한 있음)
-     - 서브 메뉴 : 추가 메뉴</br>
-        - 강화 :  
-        - 스킬 : 스킬 장착
-        - 유물 : 
-        - 마제라티 :  
-        - 특성 : 
-</td>
-</tr> 
-</body>
-</table>
-
-## UI 가이드 - 동료 (지구 방위군 군대)
-
-<table>
-<body>
-<tr>
-        <td valign = top>
-            <img src = "image/window.png"></br>   
-            * 기본 UI   </br>
-        </td> 
-<td valign= top>
-    
-24) 동료 </br>
-  - 등록 슬롯 
-    - 최대 6대까지 강화 
-  - 대기 슬롯
-    - 최대 30대까지 대기
-    - 등급은 -> 커먼, 언커먼, 레어, 에픽, 레전더리, 신화, 초월 (각 6종)
-    - 등급안에서는 보병, 장갑차, 탱크, 헬기, 비행기, 특수(미사일등 특이 분류)로 분류 
-  - 기능
-    - 소환 버튼 -> 상점에 소환으로 이동
-    - 일괄 강화 -> 동료를 재료로 강화 
-  - 팝업
-    - 찹고 (정보, 장착, 강화)
-
-</td>
-</tr> 
-</body>
-</table>
-
-
-## UI 가이드 - 던전 (추가 재화 던전)
-
-<table>
-<body>
-<tr>
-        <td valign = top>
-            <img src = "image/window.png"></br>   
-            * 기본 UI   </br>
-        </td> 
-<td valign= top>
-    
-26) 던전 </br>      
-      - 보스 던전
-        - 보스만 클리어 
-        - 다이아 보상
-        - 전용 열쇠 필요 (광고로 추가 2회 도전)
-      - 골드 던전
-        - 골드를 들고 나르려는 몬스터를 격파 
-        - 골드 보상
-        - 전용 열쇠 필요 (광고로 추가 2회 도전)
-      - 아지트 침략 던전
-        - 적이 모여있는 아지트를 침략 
-        - 룬 보상
-        - 전용 열쇠 필요 (광고로 추가 2회 도전)
-      - 타이탄 보스 던전
-        - 타이탄만 클리어 
-        - 현재 VIP 레벨보다 아래등급 장비및 스킬 보상
-        - 전용 열쇠 필요 (광고로 추가 2회 도전)
-      - 부스터 던전
-        - 로봇들만 데리고 도전 
-        - 부스터를 보상으로 얻는다. (보상을 세팅할수 있음)
-        - 전용 열쇠 필요 (광고로 추가 2회 도전)  
-</td>
-</tr> 
-</body>
-</table>
-
-## UI 가이드 - 연구
-
-<table>
-<body>
-<tr>
-        <td valign = top>
-            <img src = "image/window.png"></br>   
-            * 기본 UI   </br>
-        </td> 
-<td valign= top>
-    
-27) 상점</br>
-      - 탄광
-        - 지구안에 있는 필요 광물을 찾는다. 
-        - 
-      - 패키지 : 
-        - 서비스 목적에 따라 제공 되는 패키지 3종
-      - 기간제 :
-        - 무료 다이아
-        - 던전팩 3종(다이아 3000개 + 던전 열쇠들)
-        - 청소, 연구 관련 페키지
-        - 재화 (다이아 판매 6종)
-      - 스페셜
-        - 패쓰 (시즌패쓰)
-        - 클럽 회원권 ()
-        - 자동 축복 패키지 (추가 축복 플러스)
-        - 광고 제거 패키지 
-      
-</td>
-</tr> 
-</body>
-</table>
-
-
-## UI 가이드 - 상점
-
-<table>
-<body>
-<tr>
-        <td valign = top>
-            <img src = "image/window.png"></br>   
-            * 기본 UI   </br>
-        </td> 
-<td valign= top>
-    
-27) 상점</br>
-      - 소환 (VIP 뽑기)
-        - 화물 
-      - 패키지 : 
-        - 서비스 목적에 따라 제공 되는 패키지 3종
-      - 기간제 :
-        - 무료 다이아
-        - 던전팩 3종(다이아 3000개 + 던전 열쇠들)
-        - 청소, 연구 관련 페키지
-        - 재화 (다이아 판매 6종)
-      - 스페셜
-        - 패쓰 (시즌패쓰)
-        - 클럽 회원권 ()
-        - 자동 축복 패키지 (추가 축복 플러스)
-        - 광고 제거 패키지 
-      
-</td>
-</tr> 
-</body>
-</table>
+### 6. 고유 스킬이 있는 슬라임으로 교체 
+  - 공격형 슬라임 -> 아무르 
+  - 골드형 슬라임 -> 베이골드
+  - 체력형 슬라임 -> 방그르
+  - 회복형 슬라임 -> 마이큐라
+  
 
